# self-config

./: .ansible-lint  .gitignore  .pre-commit-config.yaml  AGENTS.md  Pipfile  README.md  ansible.cfg  hosts  pyproject.toml
.github/commands/: gemini-invoke.toml  gemini-plan-execute.toml  gemini-review.toml  gemini-scheduled-triage.toml
.github/workflows/: gemini-dispatch.yml  gemini-invoke.yml  gemini-plan-execute.yml  gemini-review.yml  gemini-scheduled-triage.yml  gemini-triage.yml
ansible/: ansible.cfg  hosts  requirements.yml
ansible/playbooks/: k8s-server.yml  kind-server.yml  laptop.yml  linux.yml  mac.yml  openclaw.yml  silence.yml  test.yml  web.yml
ansible/roles/docker/tasks/: main.yml
ansible/vars/: laptop.yml  osx.yml  web.yml
playbooks/: mac.yml  test.yaml
playbooks/templates/: test.txt
roles/master-setup/defaults/: main.yml
roles/master-setup/files/: dropbox-farzy.service  ssh-pubkey-farzad-chauffeur-prive  ssh-pubkey-farzy
roles/master-setup/handlers/: main.yml
roles/master-setup/tasks/: main.yml
roles/master-setup/templates/: dropbox-farzy.service.j2  gitconfig.j2
roles/osx-setup/tasks/: main.yml
roles/test/tasks/: main.yaml
terraform/: .terraform.lock.hcl  dns-farzad.tech.tf  dns.tf  gcp.tf  outputs.tf  scaleway-k8s.tf  scaleway-kind.tf  scaleway-openclaw.tf  setup.tf  variables.tf
terraform/gcp/: .terraform.lock.hcl  data.tf  dns.tf  external-access.tf  firewall.tf  network.tf  outputs.tf  servers.tf  setup.tf  variables.tf
terraform/gcp-management/: .terraform.lock.hcl  gcs.tf  setup.tf  terraform.tfstate  variables.tf
terraform/scaleway-k8s/: k8s-server.tf  outputs.tf
terraform/scaleway-kind/: kind-server.tf  outputs.tf  variables.tf
terraform/scaleway-management/: .terraform.lock.hcl  bucket.tf  setup.tf  terraform.tfstate  variables.tf
terraform/scaleway-openclaw/: outputs.tf  server.tf  setup.tf  variables.tf
(+157 files in other folders)
