[tool.poetry]
name = "self-config"
version = "1.0.0"
description = "Infrastructure as Code for Farzad's computers"
authors = ["Farzad FARID <farzy@farzy.org>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ansible = "^9.0.0"
apache-libcloud = "^3.4.1"
boto = "^2.49.0"
boto3 = "^1.20.45"
cryptography = "^43.0.1"
jmespath = "^1.0.1"
passlib = "^1.7.4"
openshift = "^0.13"
scaleway-sdk = "^1.15.0"
kubernetes = "^29.0.0"
jsonpatch = "^1.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
